--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test",
+    "Smoke_Test": "npx playwright test --grep @smoke",
+    "Smoke_Test_Chrome": "npx playwright test --grep @smoke --project=chromium",
+    "Smoke_Test_Listener": "npx playwright test --grep @smoke --list",
+    
+    "test:headed": "npx playwright test --headed",
+    "test:debug": "npx playwright test --debug",
+    "codegen": "npx playwright codegen",
+    "test:report": "npx playwright show-report"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
