--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "Smoke_Test": "npx playwright test --grep @smoke",
     "Smoke_Test_Chrome": "npx playwright test --grep @smoke --project=chromium",
     "Smoke_Test_Listener": "npx playwright test --grep @smoke --list",
-    
     "test:headed": "npx playwright test --headed",
     "test:debug": "npx playwright test --debug",
     "codegen": "npx playwright codegen",
@@ -23,6 +22,7 @@
   },
   "dependencies": {
     "csv-parse": "^6.1.0",
+    "dotenv": "^17.2.3",
     "xlsx": "^0.18.5"
   }
 }
